# openLMS

./: Dockerfile  Dockerfile.production  dev_server.bat  dev_server.py  dev_server.sh  docker-compose.production.yml  docker-compose.yml  fix_imports.py  manage.py  pyproject.toml
DOCS/: DEPLOYMENT_GUIDE.md  DEV_SERVER_README.md
apps/accounts/: email_service.py  views.py
apps/accounts/management/commands/: create_test_user.py
apps/customers/: models.py  views.py
apps/expenses/: models.py
apps/loyalty/: admin.py  apps.py  models.py  services.py  signals.py  tests.py  views.py
apps/orders/: pdf_service.py  serializers.py  views.py  whatsapp_service.py
apps/reports/: services.py  views.py
apps/reports/management/commands/: cleanup_reports.py  list_report_templates.py  seed_report_templates.py
apps/services/: models.py  views.py
apps/services/management/commands/: test_frontend.py  test_service_management.py
apps/system_settings/: apps.py  email_backend.py  urls.py  user_views.py  views.py
apps/system_settings/management/commands/: create_test_admin.py  diagnose_email.py  init_system_settings.py  populate_payment_methods.py  test_email.py
docker/: supervisord.conf
openLMS/: apps.py  asgi.py  search_views.py  settings.py  settings_production.py  urls.py  wsgi.py
openLMS/templatetags/: currency_format.py
